--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <title>Hotel</title>
 </head>
 <body style="font-family: 'Playfair Display', serif;">
 
    <main>
         <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light col">
         <img src="https://macairehotel.eddytech.ng/assets/images/logo-maccaire-niiiiiiii-158x40.png " alt="">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse move" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active text-white" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link text-white" href="#">Gallery</a>
-            <a class="nav-link text-white" href="#">About Us</a>
-            <button class="btn btn-outline-primary my-2 my-sm-0 book" type="submit">Book Now</button>
+            <a class="nav-link active text-white" href="./index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link text-white" href="./gallery.html">Gallery</a>
+            <a class="nav-link text-white" href="./about.html">About Us</a>
+            <button class="btn btn-primary my-2 my-sm-0 book" type="submit">Book Now</button>
           </div>
         </div>
       </nav>
