Changed name of the site

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 
    <main>
         <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark col">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light col">
         <img src="https://macairehotel.eddytech.ng/assets/images/logo-maccaire-niiiiiiii-158x40.png " alt="">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
