Made changes to the footer

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <div class="container pt-3">
             <div class="row">
               <div class="col-md-3">
-                <img style="width: 150px; height: 50px;" src="https://macairehotel.eddytech.ng/assets/images/mac-newest-1-506x256.png" alt="">
+                <h6>VILLA VIEW HOTELS LIMITED</h6>
               </div>
               <div class="col-md-3">
                 <p><b>Support Channels</b></p>
