--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
               <div>
                 <h4>Interesting Places Around Villa View Hotels Ltd</h4>
                 <ul>
-                  <li>Ibom Tropicana entertainment centre</li>
-                  <li>Aroma House</li>
-                  <li>Sun centre</li>
-                  <li>Chop Shop Restaurant</li>
-                  <li>Country style</li>
+                  <li>Ibom Tropicana entertainment centre.</li>
+                  <li>Aroma House.</li>
+                  <li>Sun centre.</li>
+                  <li>Chop Shop Restaurant.</li>
+                  <li>Country style.</li>
                 </ul>
               </div>
               
@@ -264,7 +264,7 @@
                 <small>₦5,600</small>
                 <small>avg/night</small>
                 
-                <button type="button" class="btn btn-primary book" data-toggle="button" aria-pressed="false">
+                <button type="button" class="btn btn-primary book mt-1" data-toggle="button" aria-pressed="false">
                   BOOK NOW
                 </button>
               </div>
